--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -100,6 +100,8 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 2em;
+    position: relative;
+
 }
 
 .main-info-container {
@@ -112,6 +114,16 @@ main {
     display: flex;
     justify-content: space-between;
     width: 80vw;
+
+
+}
+
+#btn-container {
+position: absolute;
+width: 300px;
+bottom: 0;
+left: 50%;
+transform: translateX(-50%);
 
 }
 
