--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -216,6 +216,36 @@ main > h1 {
 
 }
 
+#btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.random-btn {
+  margin: 0 1em;
+}
+
+.language-btn, .random-btn, .sort-btn {
+  background-color: var(--sky);
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-size: 1em;
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  border: none;
+  outline: none;
+  box-shadow: 2px 5px 10px var(--greymist);
+  cursor: pointer;
+
+}
+
+.language-btn:hover, .language-btn:active, .language-btn:focus, .random-btn:hover, .random-btn:active,
+.random-btn:focus, .sort-btn:hover, .sort-btn:active, .sort-btn:focus {
+  background-color: var(--dusk);
+}
+
+
 /**CARDS*/
 .card {
     display: flex;
@@ -229,8 +259,8 @@ main > h1 {
 
 
 .card-info-container {
-    flex: 3;
     position: relative;
+    margin-left: 1em;
 
 }
 
@@ -260,14 +290,14 @@ main > h1 {
     padding: 0.25em;
 }
 
-
 .card-menu-container {
     padding-top: 1em;
+    margin-left: 1em;
 }
 
 .card-menu-container > li {
     font-weight: 400;
-    font-size: 0.75em;
+    font-size: 1em;
 
 }
 
@@ -276,18 +306,22 @@ main > h1 {
 }
 
 #add-restaurant-btn {
-    width: 2em;
-    height: 2em;
+    width: 3em;
+    height: 3em;
     border-radius: 50%;
     line-height: 50%;
     border: none;
     background-color: var(--sky);
     color: white;
     outline: none;
+    box-shadow: 2px 5px 10px var(--greymist);
+   cursor: pointer;
+
 }
 
 #add-restaurant-btn:hover, #add-restaurant-btn:active, #add-restaurant-btn:focus {
     background-color: var(--dusk);
+
 }
 
 
