--- a/src/assets/mobile-xsmall.css
+++ b/src/assets/mobile-xsmall.css
@@ -24,23 +24,47 @@
 .mobile-info {
     font-size: 1em;
     display: block;
+    width: 85%;
+
+
 }
 
 .mobile-info::before {
     content: "Lounari";
     display: block;
-    background-color: var(--dustyrose);
     font-family: "Roboto Slab", serif;
     font-weight: 800;
+    font-size: 1.5em;
     width: 50%;
     margin: auto;
     padding: 0.25em 0.5em;
     text-align: center;
-    margin-bottom: 0.5em;  
+    margin-bottom: 0.5em;
 }
 
 /*CARDS*/
 
-.card-menu-container {
-    margin-top: 2em;
+.card-menu-container > li {
+  font-size: 1em;
+}
+
+/*MAIN*/
+
+main > h1 {
+  font-size: 1.5em;
+}
+
+/*CARDS*/
+
+.card-info-container > h2 {
+  font-size: 1.25em;
+}
+
+.card-location-container > svg {
+  width: 1.25em;
+  height: 1.5em;
+}
+
+.location {
+  font-size: 1em;
 }
