--- a/src/assets/mobile-small.css
+++ b/src/assets/mobile-small.css
@@ -92,6 +92,7 @@
     width: 80%;
     line-height: 1.4em;
     font-family: "Lato", sans-serif;
+
 }
 
 .image-container::before {
@@ -122,7 +123,8 @@
 }
 
 .card-menu-container {
-    margin-top: 1em;
+    margin-top: 2em;
+    padding-top: 0;
 }
 
 .card-info-container > h2 {
