--- a/src/assets/mobile-xsmall.css
+++ b/src/assets/mobile-xsmall.css
@@ -10,36 +10,26 @@
     --moss: #355F35;
 }
 
-/*NAVBAR*/
-#mobile-title {
-    display: none;
-}
+
 
 /*BANNER*/
 
 .banner {
-    height: 40vh;
+    height: 20vh;
 }
 
-.mobile-info {
-    font-size: 1em;
-    display: block;
-    width: 85%;
-
+.image-container::before {
+  right: 0;
+  left: 0;
 
 }
 
-.mobile-info::before {
-    content: "Lounari";
-    display: block;
-    font-family: "Roboto Slab", serif;
-    font-weight: 800;
-    font-size: 1.5em;
-    width: 50%;
-    margin: auto;
-    padding: 0.25em 0.5em;
-    text-align: center;
-    margin-bottom: 0.5em;
+.mobile-title > h1 {
+  font-size: 2em;
+}
+
+.mobile-title > h2 {
+  font-size: 1em;
 }
 
 /*CARDS*/
